# trimmed_match

./: .gitignore  MODULE.bazel  README.md  README2.md  WORKSPACE_OLD  setup.py  test.py
trimmed_match/: BUILD
trimmed_match/core/: BUILD
trimmed_match/design/: BUILD
trimmed_match/notebook/: design_colab_for_trimmed_match.ipynb  post_analysis_colab_for_trimmed_match.ipynb
