###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
"""Module file for Bazel external dependencies."""

bazel_dep(name = "abseil-cpp", version = "20250512.0")
bazel_dep(name = "glog", version = "0.7.1")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "pybind11_bazel", version = "2.13.6")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_python", version = "0.40.0")
